22/06/2011 OsiCpx
  - fix handling of primal/dual objective limit so it correctly takes objoffset into account
  - preserve objective sense also when empty model is loaded
  - make sure getWarmStart returns proper atlower/atupper status for inequalities

13/06/2011 OsiCommonTest, unittest
  - removed now redundant counting of unittest failures, so test functions now return void 

03/06/2011 OsiMsk
  - fix caching flags (bitwise negation is ~, not !)
  - free all cached data when loading problem
  - fix getDualRay and getPrimalRay so they should return a ray now 
  - fixed various further issues in unittest, so OsiMsk passes it now

15/05/2011 OsiXpr
  - added option (mipstart) to pass column solution as initial solution to a MIP solve

30/04/2011 OsiCpx, OsiGrb
  - added option (mipstart) to pass column solution as initial solution to a MIP solve

29/04/2011 OsiMsk
  - fix loss of Mosek task when copying OsiMsk

25/04/2011 OsiSpx
  - add methods to set/get/check timelimit
  - fix bug in solve methods where cached result vectors where not cleared
  - fix setWarmStart to swap status for slack variables as in getWarmStart
  - fix caching flags (bitwise negation is ~, not !)
  - redirect set/get name discipline to base class
  - fix primal/dual objective limit: take objoffset into account, correct check if limit changed after solve
  - getColSolution and getObjValue now return lower bound and value in lower bound before solve

01/04/2011 OsiGlpk
  - if initial basis is invalid or singular in initialSolve or resolve,
    construct advanced basis and try again

31/03/2011 OsiGrb
  - fixed handling of free variables in setWarmStart

30/03/2011 OsiGrb
  - fixed memory leak in loadProblem

21/03/2011 OsiCommonTest, unittest
  - add classes TestOutcome{s} to collect outcome of unittests
  - add macros to simplify asserts and exception catching and storing results as TestOutcome
  - change general and OsiGlpk tests to use new macros